--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm-check-updates": "2.14.1"
   },
   "devDependencies": {
+    "should": "^7.1.0",
     "supertest": "^1.0.0",
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
