--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,10 @@ services:
     volumes:
       - .:/code
     ports:
-      - "8000:8000"
+      - "8080:8080"
+
+  postgres:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: postgres
