--- a/.jshintrc
+++ b/.jshintrc
@@ -16,7 +16,7 @@
   "noempty": false,
   "nonew": true,
   "plusplus": false,
-  "quotmark": "single",
+  "quotmark": "double",
   "undef": true,
   "unused": true,
   "strict": true,
