--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swagger-restify-mw": "^0.1.0"
   },
   "devDependencies": {
+    "sqlite3": "4.0.0",
     "eslint": "^4.19.1",
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
